@@ -1,5 +1,10 @@
 2007-08-09  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/print/print-preview.[ch]: while dragging the preview
+	image, draw only an outline.
+
+2007-08-09  Sven Neumann  <sven@gimp.org>
+
 	* app/dialogs/preferences-dialog.c: tweaked spacings on the Color
 	Management page.
 
